--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DB_URI=mongodb+srv://ayeshalatif55566:HwJmfcrLhcotk2aX@cluster0.hwajz.mongodb.net/
+JWT_SECRET=mystrongsecretkey
+JWT_EXPIRES_IN=7d
 
-SECRET_KEY=mySuperSecretKey
 PORT=3000
 password=HwJmfcrLhcotk2aX
 user=ayeshalatif55566
